# Chibicraft

./: .gitignore  CMakeLists.txt  ClassDiagram.puml  Makefile  README.md  gmon.out  mapgen.py  prof-dev.txt
inc/: block.h  chunk.h  cursor.h  game.h  player.h  ray.h  screen.h  texture.h  world.h
report/: main.aux  main.dvi  main.fdb_latexmk  main.fls  main.out  main.tex
res/map/: 00000000.map  00000000~.map
src/: CMakeLists.txt  block.cc  chunk.cc  cursor.cc  game.cc  main.cc  player.cc  ray.cc  raycaster.cc  screen.cc  texture.cc  world.cc
